--- a/front/index.html
+++ b/front/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Радар</title>
+    <title>Radar</title>
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
@@ -56,7 +56,6 @@
                     <span class="status-indicator status-disconnected"></span>
                     <span id="status-text">DISCONNECTED</span>
                 </div>
-                <button class="menu-toggle" id="menu-toggle">☰</button>
             </div>
 
             <div class="controls" id="controls">
