Update! - Added escaped status. - New supported maps: Layali Grove, Space City. - Fixed show allies unchecked filter hides Root player.

--- a/front/index.html
+++ b/front/index.html
@@ -48,6 +48,12 @@
                         </div>
                         <span>Deadboxed</span>
                     </div>
+                    <div class="legend-item">
+                        <div class="legend-icon">
+                            <img src="assets/markers/escaped.svg" alt="Enemy Deadboxed" width="16" height="16">
+                        </div>
+                        <span>Escaped</span>
+                    </div>
                 </div>
             </div>
 
